Fix input convenience stores

--- a/www/views/deposit-stores.hbs
+++ b/www/views/deposit-stores.hbs
@@ -33,7 +33,7 @@
 				</p>
 				{{!-- <input type="text" placeholder="Número de celular a 10 dígitos"> --}}
 				<div class="submit_holder">
-					<a id="purchaseStore" class="green_button">Ver código</a>
+					<input type="submit" id="purchaseStore" class="green_button" value="Ver código">
 				</div>
 			</form>
 		</div>
