--- a/www/views/partials/other-entries.hbs
+++ b/www/views/partials/other-entries.hbs
@@ -1,7 +1,7 @@
 {{# if other_entries}}
 	<form id="pickActionsForm" action="" method="POST">
-		<select onchange="return app.render_detail('detail-quiniela.html?id='+$(this).val()+'&entry={{entry.pool_id}}', {{entry.pool_id}}, 'live', $(this).val() );" id="select_other_entries" class="unique" name="select_other_entries">
-			<option value="">Mis registros</option>
+		<select onchange="app.fetch_detail('detail-quiniela.html?id='+$(this).val()+'&entry={{entry.pool_id}}', {{entry.pool_id}}, 'live', $(this).val() ); setTimeout(function(){app.fill_entry_picks();},400);" id="select_other_entries" class="unique" name="select_other_entries">
+			<option value="">Mis registros en esta quiniela</option>
 			{{# entry}}
 				<option value="{{id}}" selected>Postura {{number}}/{{ inc ../other_entries.length}}</option>
 			{{/ entry}}
