--- a/www/views/profile-documents.hbs
+++ b/www/views/profile-documents.hbs
@@ -14,6 +14,11 @@
 			</div>
 			<div class="tab_profile documents list">
 				<ul>
+					<li class="clearfix">
+						<span style=" font-weight: 700; width: 20%; text-align: left; display: inline-block;">Documento</span> 
+						<span class="highlight" style=" font-weight: 700; width: 50%; text-align: left; display: inline-block;">Identificación</span> 
+						<span style=" font-weight: 700; width: 28%; text-align: left; display: inline-block;">Estado</span>					
+					</li>
 					{{# data.documents}}
 						<li class="clearfix">
 							<span style="width: 20%; text-align: left; display: inline-block;">{{type}}</span> 
