--- a/www/views/profile.hbs
+++ b/www/views/profile.hbs
@@ -12,29 +12,35 @@
 					<li><a class="hook" data-resource="profile-notifications" href="profile.html?method=notifications">Notificaciones</a></li>
 				</ul>
 			</div>
-			<div class="tab_profile radio_group tarjetas">
-				<ul>
-					{{# data.cards}}
-						<li class="clearfix">
-							<label for="{{brand}}{{id}}" >
-								<img src="{{cordova_full_path}}images/{{brand}}.png">
-								<span class="terminacion">{{bank_name}} ************ {{card_number}}</span>
-								<span class="expires">{{expiration_month}}/{{expiration_year}}</span>
-							</label>
-							<div class="edit_tarjeta">
-								<a data-id="{{id}}"  data-digits="{{card_number}}" class="delete_card"><img src="{{cordova_full_path}}images/eliminar.png"></a>
-							</div>							
-						</li>
-					{{/ data.cards}}
 
-					{{^ data.cards}}
-						<li class="clearfix">
-							<p>No tienes ningún método de pago registrado.</p>					
-						</li>
-					{{/ data.cards}}
-				</ul>
-				<a onclick="$('#addNewCard').velocity('fadeIn');" id="promptAddCard" class="green_button">Agregar tarjeta</a>
-			</div>
+			<div id="tabContainer" class="tabs">
+
+				<div class="tab_profile radio_group tarjetas">
+					<ul>
+						{{# data.cards}}
+							<li class="clearfix">
+								<label for="{{brand}}{{id}}" >
+									<img src="{{cordova_full_path}}images/{{brand}}.png">
+									<span class="terminacion">{{bank_name}} ************ {{card_number}}</span>
+									<span class="expires">{{expiration_month}}/{{expiration_year}}</span>
+								</label>
+								<div class="edit_tarjeta">
+									<a data-id="{{id}}"  data-digits="{{card_number}}" class="delete_card"><img src="{{cordova_full_path}}images/eliminar.png"></a>
+								</div>							
+							</li>
+						{{/ data.cards}}
+
+						{{^ data.cards}}
+							<li class="clearfix">
+								<p>No tienes ningún método de pago registrado.</p>					
+							</li>
+						{{/ data.cards}}
+					</ul>
+					<a onclick="$('#addNewCard').velocity('fadeIn');" id="promptAddCard" class="green_button">Agregar tarjeta</a>
+				</div><!-- tab_profile -->
+				
+			</div><!-- tabContainer -->
+
 			<div id="addNewCard" class="agregartarjeta clearfix backed_modal" style="display: none;">
 				<h3>AGREGAR TARJETA</h3>
 				<form id="addCardForm" method="POST" action="">
@@ -63,7 +69,7 @@
 						<input name="cvv2" id="cvv2" type="text" placeholder="CVV" data-openpay-card="cvv2">
 					</div>
 					<div class="submit_holder">
-						<input type="submit" id="savePicks" class="green_button" value="Guardar" />
+						<input type="submit" id="savePicks" class="green_button" value="Guardar" >
 					</div>
 				</form>
 			</div><!-- backed_modal -->
